syntax = "proto3";
package com.leuncle.demo.grpc;

option java_multiple_files = true;
option java_package = "com.leuncle.demo.model";
option java_outer_classname = "Hello";

message HelloRequest {
    string name = 1;
    int32 id = 2;
}

message HelloResponse {
    string message = 1;
}
