syntax = "proto3";
package com.leuncle.demo.grpc;

option java_multiple_files = true;
option java_package = "com.leuncle.demo.service";
option java_outer_classname = "GreetingService";

import "hello.proto";

service HelloService {
    rpc sayHello(HelloRequest) returns (HelloResponse);
}